Updated project with new links to current repos.

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                                     <a href="https://efrenmarin45.github.io/CodeQuiz/" target="_blank">
                                     <img class="img-fluid project-image" src="assets/images/feature-project.png" alt="project name" />
                                     </a>
-                                    <div class="ribbon">
+                                    <!-- <div class="ribbon">
                                         <div class="text">Work in Progress</div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                     
                                 <div class="desc text-left">                                    
@@ -85,8 +85,7 @@
                              <div class="item row">
                                 <!-- <div class="col-md-4 col-12"></div> -->
                                 <div class="desc col-md-12 col-12">
-                                    <h3 class="title">Developer Profile Generator</h3>
-                                    <p class="mb-2">
+                                    <h3 class="title"><a href="https://github.com/efrenmarin45/Developer-Profile-Generator" target="_blank">Developer Profile Generator</a></h3><p class="mb-2">
                                         This is a Github profile generator that takes the users input on a CLI and generates a static profile page. The program take information from the Github API and displays it for the user in a predetermined page layout.
                                     </p>
                                 </div>
@@ -95,8 +94,8 @@
                             <div class="item row">
                                 <!-- <div class="col-md-4 col-12"></div> -->
                                 <div class="desc col-md-12 col-12">
-                                    <h3 class="title">Password Generator</h3>
-                                    <p class="mb-2">
+                                    <h3 class="title"><a href="https://github.com/efrenmarin45/PasswordGenerator" target="_blank">Password Generator</a></h3><p class="mb-2">
+                                        <p class="mb-2">
                                         A simple password generator that can produce a random password based on parameters that the user indicates. This is done using HTML, CSS, and Javascript.
                                     </p>
                                 </div>
@@ -104,9 +103,9 @@
                             <div class="item row">
                                 <!-- <div class="col-md-4 col-12"></div> -->
                                 <div class="desc col-md-12 col-12">
-                                    <h3 class="title">Day Planner</h3>
-                                    <p class="mb-2"> 
-                                        This is a general day planner for users to input their information about their day and be able to cross off the tasks that are complete. 
+                                    <h3 class="title"><a href="https://github.com/efrenmarin45/Employee-Tracker" target="_blank">Employee Tracker</a></h3><p class="mb-2">
+                                        <p class="mb-2"> 
+                                        This program creates a database where the user can process CRUD actions. They will be able to create employees, departments,and roles as well as view existing ones in the database. The user will also be able to maintain the database by updating or deleting the departments, employees, or roles. Using a CLI, the user can easily make changes and receive instant feedback. 
                                     </p>
                                 </div>
                             </div>  
@@ -298,11 +297,11 @@
     
     <!-- ******FOOTER****** --> 
     <footer class="footer">
-        <div class="container text-center">
-                <!--/* This template is free as long as you keep the attribution link below. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
+        <!-- <div class="container text-center">
+                /* This template is free as long as you keep the attribution link below. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */
                 <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
         </div><!--//container-->
-    </footer><!--//footer-->
+    <!-- </footer>//footer --> 
  
     <!-- Javascript -->          
     <script type="text/javascript" src="assets/plugins/jquery-3.4.1.min.js"></script>
